fix account set address cutoff on certian screens

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -483,6 +483,7 @@ a {
             color: white;
             margin-left: 10px;
             font-size: 24px;
+            padding: 10px 0 10px 10px;
 
             &:focus {
                 outline: none;
